# aws-robomaker-small-house-world

./: CMakeLists.txt  README.md  package.xml
hooks/: aws_robomaker_small_house_world.dsv.in
launch/: master3_small_house.launch.py  small_house.launch.py
maps/: map.pgm  map.xcf
models/aws_robomaker_residential_ShoeRack_01/: model.sdf
worlds/: small_house.world
