<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aws_robomaker_small_house_world</name>
  <version>1.0.0</version>
  <description>
    AWS RoboMaker package for a house world with multiple rooms and furniture for Gazebo simulations.
  </description>
  <license>Apache 2.0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- It is also good practice to add a dependency to ros2launch to the package.xml file of your package: -->
    <exec_depend>ros2launch</exec_depend>
<!--     
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend> -->

  <export>
   <build_type>ament_cmake</build_type>
   <!-- <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/> -->
  </export>
</package>
